segunda entrega final

--- a/src/app/core/components/menu/menu.component.html
+++ b/src/app/core/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="mt-6 mx-2 container-menu">
+<div class="mt-6 mx-4 container-menu">
   <button mat-raised-button class="w-full shadow-md" routerLink="/alumnos">
     <div class="flex items-center justify-start">
       <mat-icon class="ml-2">person</mat-icon>
@@ -8,8 +8,8 @@
   </button>
 </div>
 
-<div class="mt-2 mx-2 container-menu">
-  <button mat-raised-button class="w-full shadow-md">
+<div class="mt-2 mx-4 container-menu">
+  <button mat-raised-button class="w-full shadow-md" routerLink="/cursos">
     <div class="flex items-center justify-start">
       <mat-icon class="ml-2">menu_book</mat-icon>
 
@@ -18,8 +18,8 @@
   </button>
 </div>
 
-<div class="mt-2 mx-2 container-menu">
-  <button mat-raised-button class="w-full shadow-md">
+<div class="mt-2 mx-4 container-menu">
+  <button mat-raised-button class="w-full shadow-md button-disabled">
     <div class="flex items-center justify-start">
       <mat-icon class="ml-2">personal_video</mat-icon>
 
