--- a/src/app/core/components/menu/menu.component.scss
+++ b/src/app/core/components/menu/menu.component.scss
@@ -1,7 +1,7 @@
 .container-menu{
 
     height: 50px;
-  
+    
 }
 
 .example-button-row button,
@@ -14,3 +14,8 @@
 }
 
 
+
+.button-disabled{
+  background-color: gray;
+
+}
