--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <button mat-icon-button (click)="toggleMenu()">
     <mat-icon>menu</mat-icon>
-    <span class="pl-2">SISTEMA DE GESTIÓN</span>
+    <span class="pl-2 text-xl">SISTEMA DE GESTIÓN</span>
   </button>
 </mat-toolbar>
