--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -5,7 +5,7 @@
       *ngFor="let column of metaColumns"
       [matColumnDef]="column.columnDef"
     >
-      <th mat-header-cell *matHeaderCellDef mat-sort-header appFontSizeCustom>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
         {{ column.header }}
       </th>
       <td mat-cell *matCellDef="let row">
