consumir api rest

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,6 +1,8 @@
-<mat-toolbar>
+<mat-toolbar class="flex justify-between">
   <button mat-icon-button (click)="toggleMenu()">
     <mat-icon>menu</mat-icon>
     <span class="pl-2 text-xl">SISTEMA DE GESTIÓN</span>
   </button>
+
+  <a routerLink="auth">Login</a>
 </mat-toolbar>
