--- a/src/app/pages/student/student-list/student-list.component.scss
+++ b/src/app/pages/student/student-list/student-list.component.scss
@@ -1,9 +1,9 @@
 .container{
 
-    margin-left: 100px;
-    margin-right: 100px;
-    margin-top: 30px;
-    margin-bottom: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 5%;
+    margin-bottom: 10%;
 }
 
 .mat-form-field-wrapper {
