--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -4,5 +4,7 @@
     <span class="pl-2 text-xl">SISTEMA DE GESTIÓN</span>
   </button>
 
-  <a routerLink="auth">Login</a>
+  <button mat-raised-button color="primary" type="button" (click)="logout()">
+    Logout
+  </button>
 </mat-toolbar>
