--- a/src/app/pages/student/student-list/student-list.component.html
+++ b/src/app/pages/student/student-list/student-list.component.html
@@ -9,34 +9,46 @@
     </form>
 
     <div class="grid grid-cols-1 content-center">
-      <button mat-raised-button color="primary" (click)="openModal()">
-        <mat-icon>add</mat-icon> <span>Nuevo</span>
-      </button>
+      <ng-container *ngIf="session$ | async as session">
+        <button
+          *ngIf="session.user && session.user.isAdmin"
+          mat-raised-button
+          color="primary"
+          (click)="openModal()"
+        >
+          <mat-icon>add</mat-icon> <span>Nuevo</span>
+        </button>
+      </ng-container>
     </div>
   </div>
   <app-table [dataTable]="dataTable" [metaColumns]="metaColumns">
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef appFontSizeCustom>Acciones</th>
-      <td mat-cell *matCellDef="let row">
-        <button
-          mat-icon-button
-          [matMenuTriggerFor]="menu"
-          aria-label="Example icon-button with a menu"
-        >
-          <mat-icon>more_vert</mat-icon>
-        </button>
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item (click)="openModal(row)">
-            <mat-icon>edit</mat-icon>
-            <span>Editar</span>
+      <ng-container *ngIf="session$ | async as session">
+        <td mat-cell *matCellDef="let row">
+          <button
+            [disabled]="
+              !session.user || (session.user && !session.user.isAdmin)
+            "
+            mat-icon-button
+            [matMenuTriggerFor]="menu"
+            aria-label="Example icon-button with a menu"
+          >
+            <mat-icon>more_vert</mat-icon>
           </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="openModal(row)">
+              <mat-icon>edit</mat-icon>
+              <span>Editar</span>
+            </button>
 
-          <button mat-menu-item (click)="delete(row)">
-            <mat-icon>delete</mat-icon>
-            <span>Eliminar</span>
-          </button>
-        </mat-menu>
-      </td>
+            <button mat-menu-item (click)="delete(row)">
+              <mat-icon>delete</mat-icon>
+              <span>Eliminar</span>
+            </button>
+          </mat-menu>
+        </td>
+      </ng-container>
     </ng-container>
   </app-table>
 </div>
